# python-project-50

./: .gitignore  Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: pyci.yml  tests.yml
gendiff/: __init__.py  generate_diff.py  make_diff.py  parser.py
gendiff/formaters/: JSON.py  plain.py  stylish.py
gendiff/modules/: gendiff.py  parser.py
gendiff/modules/formaters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code/modules/: formater.py  generate_diff.py  parser.py
hexlet_code/modules/formaters/: __init__.py  plain.py  stylish.py
hexlet_code/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py  test_gendiff_deep_json.py  test_gendiff_deep_yaml.py  test_gendiff_json.py  test_gendiff_yaml.py
tests/fixtures/: file2.yml  file3.yml  file4.yml  fixture_deep.py  fixture_plain.py
