[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.scripts]
gendiff = 'hexlet_code.scripts.gendiff:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
